develop OTP Code controller
